--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,5 +18,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: pub get
+
+    - name: Check format
+      run: dart format --set-exit-if-changed .
+    
+    - name: Analyze
+      run: dart analyze
+
     - name: Run tests
       run: pub run test
