--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,9 @@ jobs:
 
     - name: Run tests
       run: pub run test
+
+    - name: Coverage
+      run: dart pub run test_coverage
+
+    - name: Upload coverage to codecov
+      run: curl -s https://codecov.io/bash | bash
