--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,4 +12,5 @@ dependencies:
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.15.4
-  test_coverage: ^0.4.1
+  test_coverage: ^0.4.3
+  meta: ^1.2.3
