--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,10 @@ environment:
 
 dependencies:
   characters: ^1.0.0
+  meta: ^1.2.3
+  collection: ^1.14.13
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.15.4
   test_coverage: ^0.4.3
-  meta: ^1.2.3
