--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: barbecue
-description: A starting point for Dart libraries or applications.
-version: 0.0.1
+description: Render text tables for your command line applications. Use padding, spans, custom borders, ANSI colors and more!
+version: 0.0.2
 homepage: https://github.com/knaeckeKami/barbecue
 
 environment:
