--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   characters: ^1.0.0
   meta: ^1.2.3
   collection: ^1.14.13
+  string_validator: ^0.1.4
 
 dev_dependencies:
   pedantic: ^1.9.0
