--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,14 @@ version: 0.3.0-alpha1
 homepage: https://github.com/knaeckeKami/barbecue
 
 environment:
-  sdk: '>=2.8.1 <3.0.0'
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
 
 dependencies:
-  characters: ^1.0.0
-  meta: ^1.2.3
-  collection: ^1.14.13
-  string_validator: ^0.1.4
+  characters: ^1.1.0-nullsafety.5
+  collection: ^1.15.0-nullsafety.5
+  string_validator: ^0.2.0-nullsafety.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.15.4
-  test_coverage: ^0.4.3
+  pedantic: ^1.10.0-nullsafety.3
+  test: ^1.16.0-nullsafety.12
+  test_coverage: ^0.5.0
