--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: barbecue
 description: Render text tables for your command line applications. Use padding, spans, custom borders, ANSI colors and more!
-version: 0.3.0-alpha1
+version: 0.4.0-nullsafety.0
 homepage: https://github.com/knaeckeKami/barbecue
 
 environment:
