--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: barbecue
 description: Render text tables for your command line applications. Use padding, spans, custom borders, ANSI colors and more!
-version: 0.3.0-alpha1
+version: 0.4.0
 homepage: https://github.com/knaeckeKami/barbecue
 
 environment:
-  sdk: '>=2.12.0-29.10.beta <3.0.0'
+
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  characters: ^1.1.0-nullsafety.5
-  collection: ^1.15.0-nullsafety.5
-  string_validator: ^0.2.0-nullsafety.0
+  characters: ^1.1.0
+  collection: ^1.15.0
+  string_validator: ^0.3.0
+  meta: ^1.3.0
 
 dev_dependencies:
   pedantic: ^1.10.0-nullsafety.3
