--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install dependencies
-      run: pub get
+      run: dart pub get
 
     - name: Check format
       run: dart format --set-exit-if-changed .
@@ -26,10 +26,10 @@ jobs:
       run: dart analyze
 
     - name: Run tests
-      run: pub run test
+      run: dart test
 
     - name: Coverage
-      run: dart pub run test_coverage
+      run: dart pub global activate coverage && dart pub global run coverage:test_with_coverage
 
     - name: Upload coverage to codecov
       run: curl -s https://codecov.io/bash | bash
