--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       run: dart analyze
 
     - name: Run tests
-      run: pub run test
+      run: dart test
 
     - name: Coverage
       run: dart pub run test_coverage
