--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -15,9 +15,9 @@ jobs:
       image: google/dart:dev
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Install dependencies
-      run: pub get
+      run: dart pub get
 
     - name: Check format
       run: dart format --set-exit-if-changed .
@@ -29,7 +29,7 @@ jobs:
       run: pub run test
 
     - name: Coverage
-      run: dart pub run test_coverage
+      run: dart pub global run coverage:test_with_coverage
 
     - name: Upload coverage to codecov
       run: curl -s https://codecov.io/bash | bash
