--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,15 @@ version: 0.4.0
 homepage: https://github.com/knaeckeKami/barbecue
 
 environment:
-
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   characters: ^1.1.0
   collection: ^1.15.0
-  string_validator: ^0.3.0
+  string_validator: ^1.0.0
   meta: ^1.3.0
 
 dev_dependencies:
-  pedantic: ^1.10.0-nullsafety.3
-  test: ^1.16.0-nullsafety.12
-  test_coverage: ^0.5.0
+  lints: ^3.0.0
+  test: ^1.25.0
+  coverage: ^1.7.2
